test/parser/valid/modifiers/abstract.java
protected abstract class A {
  public abstract int m();
}

