test/parser/bad/operations/unary_plus.java
protected class A {
  public int m(int x) {
    return +x; 
  }
}

